# UUIDValue

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: UUIDValue.hpp
src/: UUIDValue.cpp
test/: CMakeLists.txt  UUIDValue.cpp  common.hpp
